--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ script:
 - make
 after_success:
 - make release
+install:
+- go get -u golang.org/x/lint/golint
+- go get golang.org/x/tools/cmd/goimports
 env:
   global:
   - |
